--- a/SchoolRooms.tex
+++ b/SchoolRooms.tex
@@ -1,6 +1,17 @@
 \documentclass{report}
+\usepackage[utf8]{inputec}
+\usepackage{amsthm}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsfonts}
+
+\title{Problems}
+\author{J.A.H.G.}
+
 %Introduce the files in latex
 \begin{document}
+\maketitle
+
 \input{18J25M.tex}
 \input{18J30L.tex}
 \input{18J31M.tex}
