--- a/SchoolRooms.tex
+++ b/SchoolRooms.tex
@@ -1,5 +1,6 @@
 \documentclass{report}
 \usepackage[utf8]{inputec}
+\usepackage[spanish]{babel}
 \usepackage{amsthm}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -11,7 +12,7 @@
 %Introduce the files in latex
 \begin{document}
 \maketitle
-
+\tableofcontents
 \input{18J25M.tex}
 \input{18J30L.tex}
 \input{18J31M.tex}
