--- a/18J25M.tex
+++ b/18J25M.tex
@@ -5,6 +5,17 @@
 \section{Manual e Indicaciones}
 
 \section{Aritm\'{e}tica en N\'{u}meros Reales}
+\begin{enumerate}
+  \item Establish the following properties of proportions: if $a$, $b$, $c$ and $d$ are nonzero reals, such that $\frac{a}{b}= \frac{c}{d}$, then
+  \begin{equation*}
+    \frac{a}{b}= \frac{c}{d}= \frac{a\pm c}{b\pm d}.
+  \end{equation*}
+  \begin{proof}
+  
+  \end{proof}
+  
+  \item
+\end{enumerate}
 
 \section{Relaci\'{o}n de Orden en los N\'{u}meros Reales}
 
