--- a/18J25M.tex
+++ b/18J25M.tex
@@ -11,7 +11,12 @@
     \frac{a}{b}= \frac{c}{d}= \frac{a\pm c}{b\pm d}.
   \end{equation*}
   \begin{proof}
-  
+    \begin{eqnarray*}
+      ab&=& ba,\\
+      ab\pm bc &=& ba\pm bc,\\
+      ab\pm bc &=& ba\pm bc,\\
+      
+    \end{eqnarray*}
   \end{proof}
   
   \item
