--- a/18J25M.tex
+++ b/18J25M.tex
@@ -23,7 +23,7 @@
   
   \item Give a sequence $(a_{1}, a_{2}, a_{3}, \dots)$ of digits, prove that the real number $0.a_{1}a_{2}a_{3}\dots$ represents the decimal expansion of a rational if and only if the sequence $(a_{1}, a_{2}, a_{3}, \dots)$ is periodic from some point on, in the sence of \ref{eq_1.3}.
   \begin{equation}\label{eq_1.3}
-    (a_{1}, a_{2}, \dots, a_{l}, b_{1}, b_{2}, \dots, b_{p}, b_{1}, b_{2}, \dots, b_{p}, b_{1}, b_{2}, \dots, b_{p}, \dots)
+    (a_{1}, a_{2}, \dots, a_{l}, \underbrace{b_{1}, b_{2}, \dots, b_{p}}_{p}, \underbrace{b_{1}, b_{2}, \dots, b_{p}}_{p}, \underbrace{b_{1}, b_{2}, \dots, b_{p}}_{p}, \dots)
   \end{equation}
   \begin{proof}
   $$\dots$$
